Revision history for Email-MIME-Kit

{{$NEXT}}

3.000004  2016-08-03 22:48:27-04:00 America/New_York
        - require a newer Email::MIME so we can rely on the header_raw method

3.000003  2016-08-03 09:08:35-04:00 America/New_York
        - manifest.json is now properly decoded while being read, so
          UTF-8 strings in the manifest.json are treated the same way as
          \u.... sequences.  If you had been doubly-UTF-8-encoding your
          manifest.json to work around this bug, your code is now broken
          because my code is now fixed.

3.000002  2015-02-19 11:02:14-05:00 America/New_York
        - immutabilize more classes

3.000001  2014-12-01 14:10:12-05:00 America/New_York
          [BREAKING CHANGES]
        - content read from disk (templates, for example) is now decoded
          as UTF-8 if and only if the content type for which it is being used
          is text/*
        - for more information on this change, consult the "ENCODING" section
          of the documentation for Email::MIME::Kit

          [BUG FIXES]
        - non-text parts are no longer padded with CRLFs

2.102015  2014-11-02 08:59:04-05:00 America/New_York
        - read kit entries in binary mode for the sake of Win32 (thanks,
          Octavian Rasnita!)

2.102014  2014-06-06 08:24:52-04:00 America/New_York
        - break a circular reference in the assembler (thanks, Charlie
          Garrison)

2.102013  2013-08-12 21:32:01 America/New_York
          update bugtracker and repo

          only call _set_attachment_info when it is present

2.102012  2013-04-08 15:29:38 America/New_York
          make tests for header encoding less specific: the header must be
          encoded, but we don't mind if it's B or Q

2.102011  2012-07-25 10:58:12 America/New_York
          stop failing with changed crlf detection

2.102010  2010-07-20 15:00:43 America/Los_Angeles
          eliminate use of auto_deref on some private attributes

2.101960  2010-07-15 09:04:53 America/New_York